--- a/SampleApp/PayPal-iOS-SDK-Sample-App/en.lproj/MainStoryboard_iPad.storyboard
+++ b/SampleApp/PayPal-iOS-SDK-Sample-App/en.lproj/MainStoryboard_iPad.storyboard
@@ -16,7 +16,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <navigationItem title="PayPal iOS SDK Demo" id="14">
+                                    <navigationItem title="Daily Shirt Deals!" id="14">
                                         <barButtonItem key="rightBarButtonItem" title="Settings" id="15">
                                             <connections>
                                                 <action selector="togglePopover:" destination="2" id="23"/>
@@ -47,11 +47,30 @@
                                 <color key="textColor" red="0.50715438180000005" green="0.50715438180000005" blue="0.50715438180000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view opaque="NO" contentMode="scaleToFill" id="gnk-gO-asr">
+                                <rect key="frame" x="244" y="377" width="280" height="78"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="check.png" id="3XM-0x-hhb">
+                                        <rect key="frame" x="107" y="2" width="66" height="42"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Your transaction was successful!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="twD-J0-WQk">
+                                        <rect key="frame" x="0.0" y="46" width="280" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.49946925949999998" green="0.49946925949999998" blue="0.49946925949999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.84999999999999998" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="payButton" destination="58w-1d-IUE" id="nJL-S6-5kj"/>
+                        <outlet property="successView" destination="gnk-gO-asr" id="05H-59-83e"/>
                         <segue destination="5" kind="popover" identifier="showAlternate" popoverAnchorBarButtonItem="15" id="22">
                             <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                         </segue>
@@ -70,9 +89,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <navigationBar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="blackOpaque" id="17">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <rect key="frame" x="0.0" y="788" width="320" height="44"/>
                                 <items>
-                                    <navigationItem title="Title" id="18">
+                                    <navigationItem title="SDK Settings" id="18">
                                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="19">
                                             <connections>
                                                 <action selector="done:" destination="5" id="21"/>
@@ -82,8 +101,7 @@
                                 </items>
                             </navigationBar>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="KRd-iK-SCZ">
-                                <rect key="frame" x="20" y="62" width="280" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                                <rect key="frame" x="20" y="20" width="280" height="44"/>
                                 <segments>
                                     <segment title="Mock"/>
                                     <segment title="Sandbox"/>
@@ -94,14 +112,28 @@
                                 </connections>
                             </segmentedControl>
                             <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="HOZ-ZV-yX2">
-                                <rect key="frame" x="223" y="120" width="79" height="27"/>
+                                <rect key="frame" x="222" y="79" width="79" height="27"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                 <connections>
                                     <action selector="processCreditCardsChanged:" destination="5" eventType="valueChanged" id="m6A-op-xmI"/>
                                 </connections>
                             </switch>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Accept credit cards" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Kgb-eO-Kue">
-                                <rect key="frame" x="21" y="123" width="195" height="21"/>
+                                <rect key="frame" x="20" y="82" width="195" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" editable="NO" id="F7i-xS-Fyw">
+                                <rect key="frame" x="21" y="145" width="279" height="180"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Most recent proof of payment:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hbd-B9-C2s">
+                                <rect key="frame" x="20" y="119" width="226" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
@@ -114,6 +146,8 @@
                     <connections>
                         <outlet property="acceptCreditCardsSwitch" destination="HOZ-ZV-yX2" id="vqn-V8-Hb0"/>
                         <outlet property="environmentSegmentedControl" destination="KRd-iK-SCZ" id="GZ3-Ym-Dy9"/>
+                        <outlet property="proofOfPaymentLabel" destination="hbd-B9-C2s" id="Rni-HE-Vf0"/>
+                        <outlet property="proofOfPaymentTextView" destination="F7i-xS-Fyw" id="eE0-5K-cAY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6" sceneMemberID="firstResponder"/>
@@ -121,6 +155,9 @@
             <point key="canvasLocation" x="836" y="101"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="check.png" width="84" height="75"/>
+    </resources>
     <classes>
         <class className="ZZFlipsideViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZZFlipsideViewController.h"/>
@@ -130,6 +167,8 @@
                 <relationship kind="action" name="processCreditCardsChanged:"/>
                 <relationship kind="outlet" name="acceptCreditCardsSwitch" candidateClass="UISwitch"/>
                 <relationship kind="outlet" name="environmentSegmentedControl" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="proofOfPaymentLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="proofOfPaymentTextView" candidateClass="UITextView"/>
             </relationships>
         </class>
         <class className="ZZMainViewController" superclassName="UIViewController">
@@ -137,6 +176,7 @@
             <relationships>
                 <relationship kind="action" name="togglePopover:"/>
                 <relationship kind="outlet" name="payButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="successView" candidateClass="UIView"/>
             </relationships>
         </class>
     </classes>
