--- a/SampleApp/PayPal-iOS-SDK-Sample-App/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/SampleApp/PayPal-iOS-SDK-Sample-App/en.lproj/MainStoryboard_iPhone.storyboard
@@ -49,11 +49,37 @@
                                 <color key="textColor" red="0.50715438180000005" green="0.50715438180000005" blue="0.50715438180000005" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view opaque="NO" contentMode="scaleToFill" id="Qtp-6a-bII">
+                                <rect key="frame" x="20" y="183" width="280" height="78"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="check.png" id="X9U-SJ-xTc">
+                                        <rect key="frame" x="107" y="4" width="66" height="42"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Your transaction was successful!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zNl-04-NT9">
+                                        <rect key="frame" x="0.0" y="42" width="280" height="29"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" red="0.49946925951086951" green="0.49946925951086951" blue="0.49946925951086951" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.84999999999999998" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                            <navigationBar contentMode="scaleToFill" id="9g1-Dl-Uaj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Daily Shirt Deals!" id="kJF-ne-QAt"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <connections>
                         <outlet property="payButton" destination="reP-B2-UoP" id="UND-mv-XZs"/>
+                        <outlet property="successView" destination="Qtp-6a-bII" id="Asz-wM-FU3"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
@@ -107,12 +133,28 @@
                                 <color key="textColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" editable="NO" id="nPt-B9-1g2">
+                                <rect key="frame" x="21" y="196" width="279" height="200"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Most recent proof of payment:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" id="iVB-5k-YHA">
+                                <rect key="frame" x="20" y="169" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.94117647059999998" green="0.94117647059999998" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.25" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
                         <outlet property="acceptCreditCardsSwitch" destination="cjA-2Z-Ceu" id="Put-JI-Vd6"/>
                         <outlet property="environmentSegmentedControl" destination="5AB-L4-tJB" id="H09-FT-tgf"/>
+                        <outlet property="proofOfPaymentLabel" destination="iVB-5k-YHA" id="dIh-2i-WWi"/>
+                        <outlet property="proofOfPaymentTextView" destination="nPt-B9-1g2" id="hjw-Ao-jsS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8" sceneMemberID="firstResponder"/>
@@ -120,6 +162,9 @@
             <point key="canvasLocation" x="368" y="182"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="check.png" width="84" height="75"/>
+    </resources>
     <classes>
         <class className="ZZFlipsideViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZZFlipsideViewController.h"/>
@@ -129,6 +174,8 @@
                 <relationship kind="action" name="processCreditCardsChanged:"/>
                 <relationship kind="outlet" name="acceptCreditCardsSwitch" candidateClass="UISwitch"/>
                 <relationship kind="outlet" name="environmentSegmentedControl" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="proofOfPaymentLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="proofOfPaymentTextView" candidateClass="UITextView"/>
             </relationships>
         </class>
         <class className="ZZMainViewController" superclassName="UIViewController">
@@ -136,6 +183,7 @@
             <relationships>
                 <relationship kind="action" name="togglePopover:"/>
                 <relationship kind="outlet" name="payButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="successView" candidateClass="UIView"/>
             </relationships>
         </class>
     </classes>
